--- a/typing.css
+++ b/typing.css
@@ -16,7 +16,7 @@
 
 .letter {
   width: 5.9%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
 
   color: #F5F5F5;
@@ -32,7 +32,7 @@
 
 .left {
   width: 5.9%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
   text-align: left;
   padding-left: 10%;
@@ -50,7 +50,7 @@
 
 .right {
   width: 5.9%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
 
   color: #F5F5F5;
@@ -69,7 +69,7 @@
 .double {
   padding-top: .8%;
   width: 5.9%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
   line-height: 50%;
 
@@ -88,7 +88,7 @@
 
 .small {
   width: 9.3%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
 
   color: #F5F5F5;
@@ -106,7 +106,7 @@
 
 .middle {
   width: 10.85%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
 
   color: #F5F5F5;
@@ -124,7 +124,7 @@
 
 .large {
   width: 14.1%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
 
   color: #F5F5F5;
@@ -140,7 +140,7 @@
 
 .command {
   width: 7.6%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
 
   color: #F5F5F5;
@@ -156,7 +156,7 @@
 
 .space {
   width: 31.9%;
-  background: #343434;
+  background: #50596c;
   z-index: 2;
 
   color: #F5F5F5;
